<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccount">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/outline_person_24"
        android:drawablePadding="13dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:drawableLeft="@drawable/outline_email_24"
        android:drawablePadding="13dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:drawableLeft="@drawable/outline_phone_24"
        android:drawablePadding="13dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="258dp"
        android:layout_height="68dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="181dp"
        android:layout_height="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/outline_arrow_back_24" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="183dp"
        android:layout_height="41dp"
        android:fontFamily="@font/acme"
        android:text="@string/accinfo"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

</androidx.constraintlayout.widget.ConstraintLayout>