<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/acc"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.982" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="39dp"
            android:layout_height="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.967"
            app:srcCompat="@drawable/outline_arrow_back_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Pink"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/profilell1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/acme"
                android:text="@string/mypro"
                android:textColor="#000"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Pink"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/profilell2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/profilell1"
            android:background="@null"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/baseline_shopping_bag_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/acme"
                android:text="@string/myord"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Pink"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/profilell3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/baseline_question_mark_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/acme"
                android:text="@string/abt"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Pink"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/profilell4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:onClick="accLogout"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/baseline_logout_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/acme"
                android:text="@string/logout"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>
</LinearLayout>
